Lots of changes, forgot about commits.

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,3 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  background: #151619;
+}
