--- a/src/components/Input/Input.scss
+++ b/src/components/Input/Input.scss
@@ -2,5 +2,53 @@
   &__title {
     font-weight: 400;
     font-size: 14px;
+    color: #c5c7ce;
+    margin-bottom: 4px;
   }
+
+  &__wrapper {
+    // background: linear-gradient(#bc75ff, #798fff);
+    // width: 100%;
+    // height: 46px;
+    // border-radius: 4px;
+    // padding-top: 2px;
+    // padding-left: 2px;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+  }
+
+  &__input {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    background: #393c46;
+    border-radius: 4px;
+    border: none;
+    padding: 12px 16px;
+    // width: calc(100% - 2px);
+    width: 100%;
+    // height: calc(100% - 2px);
+    height: 46px;
+    color: #f2f2f2;
+
+    &_list {
+      height: auto;
+      list-style: none;
+      border-top-right-radius: 0;
+      border-top-left-radius: 0;
+    }
+
+    &::placeholder {
+      color: #c5c7ce;
+    }
+
+    &:focus {
+      outline: none;
+    }
+  }
+}
+
+.list-value {
 }
