--- a/src/pages/ListPage/ListPage.scss
+++ b/src/pages/ListPage/ListPage.scss
@@ -22,6 +22,7 @@
     font-weight: 400;
     font-size: 24px;
     line-height: 32px;
+    margin-bottom: 24px;
   }
 
   @media (max-width: 1000px) {
