--- a/src/components/Check/Check.scss
+++ b/src/components/Check/Check.scss
@@ -1,18 +1,24 @@
-.check {
+.checkbox {
   display: flex;
   flex-direction: row;
   align-items: center;
   padding: 8px 16px 8px 12px;
   gap: 8px;
   height: 40px;
+  cursor: pointer;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 
   &__name {
-    cursor: pointer;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+    // -webkit-touch-callout: none;
+    // -webkit-user-select: none;
+    // -khtml-user-select: none;
+    // -moz-user-select: none;
+    // -ms-user-select: none;
+    // user-select: none;
   }
 }
