--- a/src/App.scss
+++ b/src/App.scss
@@ -11,3 +11,12 @@
     margin-bottom: 40px;
   }
 }
+
+.unselectable {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
