--- a/src/pages/ListPage/ListPage.scss
+++ b/src/pages/ListPage/ListPage.scss
@@ -2,9 +2,11 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
+  margin-bottom: 43px;
 
   @media (max-width: 1000px) {
     margin-top: 24px;
+    margin-bottom: 24px;
   }
 }
 
@@ -24,16 +26,29 @@
   }
 
   &__title {
+    display: flex;
+    gap: 12px;
     font-family: 'Roboto';
     font-weight: 400;
     font-size: 24px;
     line-height: 32px;
     margin-bottom: 24px;
+
+    &-icon {
+      @media (min-width: 1000px) {
+        display: none;
+      }
+    }
   }
 
   @media (max-width: 1000px) {
-    position: absolute;
     display: none;
+
+    &_open {
+      display: block;
+      width: 100%;
+      padding: 32px 8px;
+    }
   }
 }
 
@@ -64,4 +79,23 @@
       display: none;
     }
   }
+}
+
+.filter-wrapper {
+  @media (max-width: 1000px) {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.pagination {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  justify-content: center;
+  width: fit-content;
 }
